casi se termina

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             equilibrio en tu vida.
           </p>
         </div>
-        <div class="swiper">
+        <!-- <div class="swiper">
           <div class="swiper-wrapper">
             <div class="swiper-slide card">
               <img src="./img/image-9-3.png" alt="Imagen del testimonio 1" />
@@ -204,7 +204,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
         <button class="btn btn-primary">Reserva tu consulta</button>
       </div>
     </section>
