--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <!-- icons -->
     <link
       rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+    <link
+      rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
     <!-- font -->
@@ -75,7 +79,7 @@
     </section>
 
     <!-- Services Section -->
-    <section class="services-section">
+    <section class="services-section ">
       <div class="titulo">
         <img src="./img/group-1.png" alt="" />
         <h2>Nuestros Servicios</h2>
@@ -85,8 +89,8 @@
           espirituales personalizadas.
         </p>
       </div>
-      <div class="row">
-        <div class="col-md-4">
+      <div class="row ">
+        <div class="col-md-4 ">
           <div class="card service-card">
             <img
               src="./img/rectangle-34.png"
@@ -105,7 +109,7 @@
           </div>
         </div>
 
-        <div class="col-md-4">
+        <div class="col-md-4 ">
           <div class="card service-card">
             <img
               src="./img/rectangle-34-1.png"
@@ -123,7 +127,7 @@
           </div>
         </div>
 
-        <div class="col-md-4">
+        <div class="col-md-4 ">
           <div class="card service-card">
             <img
               src="./img/rectangle-34-2.png"
@@ -144,7 +148,7 @@
     </section>
 
     <!-- acerca de-->
-    <section class="about-section">
+    <section class="about-section  ">
       <div class="container">
         <img src="./img/Vector.png" alt="" />
         <h2>Acerca de Nosotros</h2>
@@ -269,7 +273,7 @@
         </div>
       </div>
     </footer>
-    
+
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
   </body>
