--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktWY1J1FZrfn2/RU7gkaEq8iRVBsi0tudnhnDq9Gy"
+      crossorigin="anonymous"
+    />
     <!-- icons -->
     <link
       rel="stylesheet"
@@ -79,7 +85,7 @@
     </section>
 
     <!-- Services Section -->
-    <section class="services-section ">
+    <section class="services-section">
       <div class="titulo">
         <img src="./img/group-1.png" alt="" />
         <h2>Nuestros Servicios</h2>
@@ -89,8 +95,8 @@
           espirituales personalizadas.
         </p>
       </div>
-      <div class="row ">
-        <div class="col-md-4 ">
+      <div class="row">
+        <div class="col-md-4">
           <div class="card service-card">
             <img
               src="./img/rectangle-34.png"
@@ -109,7 +115,7 @@
           </div>
         </div>
 
-        <div class="col-md-4 ">
+        <div class="col-md-4">
           <div class="card service-card">
             <img
               src="./img/rectangle-34-1.png"
@@ -127,7 +133,7 @@
           </div>
         </div>
 
-        <div class="col-md-4 ">
+        <div class="col-md-4">
           <div class="card service-card">
             <img
               src="./img/rectangle-34-2.png"
@@ -148,7 +154,7 @@
     </section>
 
     <!-- acerca de-->
-    <section class="about-section  ">
+    <section class="about-section">
       <div class="container">
         <img src="./img/Vector.png" alt="" />
         <h2>Acerca de Nosotros</h2>
@@ -177,38 +183,77 @@
             equilibrio en tu vida.
           </p>
         </div>
-        <!-- <div class="swiper">
-          <div class="swiper-wrapper">
-            <div class="swiper-slide card">
-              <img src="./img/image-9-3.png" alt="Imagen del testimonio 1" />
-              <div class="card-body">
-                <h5 class="card-title">María López, 34 años</h5>
-                <p class="card-text">Lectura de Tarot</p>
-              </div>
-            </div>
-            <div class="swiper-slide card">
-              <img src="./img/image-9-3.png" alt="Imagen del testimonio 2" />
-              <div class="card-body">
-                <h5 class="card-title">Javier Martínez, 42 años</h5>
-                <p class="card-text">Amarre de Amor</p>
-              </div>
-            </div>
-            <div class="swiper-slide card">
-              <img src="./img/image-9-3.png" alt="Imagen del testimonio 3" />
-              <div class="card-body">
-                <h5 class="card-title">Laura García, 79 años</h5>
-                <p class="card-text">Limpieza Energética</p>
-              </div>
-            </div>
-            <div class="swiper-slide card">
-              <img src="./img/image-9-3.png" alt="Imagen del testimonio 4" />
-              <div class="card-body">
-                <h5 class="card-title">Carmen Rodríguez, 50 años</h5>
-                <p class="card-text">Lectura de Tarot y Astrología</p>
+        <!-- Carrusel -->
+        <div
+          id="carouselTestimonios"
+          class="carousel slide"
+          data-bs-ride="carousel"
+        >
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <div class="row">
+                <!-- Card 1 -->
+                <div class="col-md-3">
+                  <div class="card">
+                    <img
+                      src="./img/image-9-3.png"
+                      class="card-img-top"
+                      alt="Testimonio 1"
+                    />
+                    <div class="card-body">
+                      <h5 class="card-title">Maria laloba Lopez, 34 años</h5>
+                      <p class="card-text">Lectura de Tarot</p>
+                    </div>
+                  </div>
+                </div>
+                <!-- Card 2 -->
+                <div class="col-md-3">
+                  <div class="card">
+                    <img
+                      src="./img/image-9-3.png"
+                      class="card-img-top"
+                      alt="Testimonio 2"
+                    />
+                    <div class="card-body">
+                      <h5 class="card-title">Javier Martínez, 42 años</h5>
+                      <p class="card-text">Amarre de Amor</p>
+                    </div>
+                  </div>
+                </div>
+                <!-- Card 3 -->
+                <div class="col-md-3">
+                  <div class="card">
+                    <img
+                      src="./img/image-9-3.png"
+                      class="card-img-top"
+                      alt="Testimonio 3"
+                    />
+                    <div class="card-body">
+                      <h5 class="card-title">Laura lurdes García, 29 años</h5>
+                      <p class="card-text">Limpieza Energética</p>
+                    </div>
+                  </div>
+                </div>
+                <!-- Card 4 -->
+                <div class="col-md-3">
+                  <div class="card">
+                    <img
+                      src="./img/image-9-3.png"
+                      class="card-img-top"
+                      alt="Testimonio 4"
+                    />
+                    <div class="card-body">
+                      <h5 class="card-title">
+                        Carmen luciana Rodríguez, 50 años
+                      </h5>
+                      <p class="card-text">Lectura de Tarot y Astrología</p>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
-        </div> -->
+        </div>
         <button class="btn btn-primary">Reserva tu consulta</button>
       </div>
     </section>
@@ -276,5 +321,10 @@
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-mQ93QzZCWlR4gg7YrsUXA2y++OMz1s5Fp7Vg4I5ih0PVAB9rZBHfQl4wuQ8K4wLA"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
