--- a/index.html
+++ b/index.html
@@ -184,77 +184,53 @@
           </p>
         </div>
         <!-- Carrusel -->
-        <div
-          id="carouselTestimonios"
-          class="carousel slide"
-          data-bs-ride="carousel"
-        >
+        <div id="carouselExampleIndicators" class="carousel slide">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <div class="row">
-                <!-- Card 1 -->
-                <div class="col-md-3">
-                  <div class="card">
-                    <img
-                      src="./img/image-9-3.png"
-                      class="card-img-top"
-                      alt="Testimonio 1"
-                    />
-                    <div class="card-body">
-                      <h5 class="card-title">Maria laloba Lopez, 34 años</h5>
-                      <p class="card-text">Lectura de Tarot</p>
-                    </div>
-                  </div>
+              <div class="card" style="width: 18rem;">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
-                <!-- Card 2 -->
-                <div class="col-md-3">
-                  <div class="card">
-                    <img
-                      src="./img/image-9-3.png"
-                      class="card-img-top"
-                      alt="Testimonio 2"
-                    />
-                    <div class="card-body">
-                      <h5 class="card-title">Javier Martínez, 42 años</h5>
-                      <p class="card-text">Amarre de Amor</p>
-                    </div>
-                  </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="card" style="width: 18rem;">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
-                <!-- Card 3 -->
-                <div class="col-md-3">
-                  <div class="card">
-                    <img
-                      src="./img/image-9-3.png"
-                      class="card-img-top"
-                      alt="Testimonio 3"
-                    />
-                    <div class="card-body">
-                      <h5 class="card-title">Laura lurdes García, 29 años</h5>
-                      <p class="card-text">Limpieza Energética</p>
-                    </div>
-                  </div>
-                </div>
-                <!-- Card 4 -->
-                <div class="col-md-3">
-                  <div class="card">
-                    <img
-                      src="./img/image-9-3.png"
-                      class="card-img-top"
-                      alt="Testimonio 4"
-                    />
-                    <div class="card-body">
-                      <h5 class="card-title">
-                        Carmen luciana Rodríguez, 50 años
-                      </h5>
-                      <p class="card-text">Lectura de Tarot y Astrología</p>
-                    </div>
-                  </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="card" style="width: 18rem;">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
               </div>
             </div>
           </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
         </div>
-        <button class="btn btn-primary">Reserva tu consulta</button>
+        <div>
+          <button class="btn btn-primary">Reserva tu consulta</button>
+        </div>
       </div>
     </section>
 
