--- a/index.html
+++ b/index.html
@@ -183,94 +183,128 @@
             equilibrio en tu vida.
           </p>
         </div>
-        <!-- Carrusel -->
-        <div id="carouselExampleIndicators" class="carousel slide">
-          <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-          </div>
+
+        <!-- Carrusel de testimonios -->
+        <div
+          id="carouselTestimonios"
+          class="carousel slide"
+          data-bs-ride="carousel"
+        >
           <div class="carousel-inner">
+            <!-- Primera slide con tres tarjetas -->
             <div class="carousel-item active">
-              <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <div class="row">
+                <div class="col-md-4">
+                  <div class="card" style="width: 18rem">
+                    <img
+                      src="./img/image-9-3.png"
+                      class="card-img-top"
+                      alt="Testimonio 1"
+                    />
+                    <div class="card-body">
+                      <h5 class="card-title">Maria Lopez, 34 años</h5>
+                      <p class="card-text">Lectura de Tarot</p>
+                    </div>
+                  </div>
                 </div>
-              </div>
-              <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <div class="col-md-4">
+                  <div class="card" style="width: 18rem">
+                    <img
+                      src="./img/image-9-3.png"
+                      class="card-img-top"
+                      alt="Testimonio 2"
+                    />
+                    <div class="card-body">
+                      <h5 class="card-title">Maria Lopez, 34 años</h5>
+                      <p class="card-text">Lectura de Tarot</p>
+                    </div>
+                  </div>
                 </div>
-              </div>
-              <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                </div>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                </div>
-              </div>
-              <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                </div>
-              </div>
-              <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <div class="col-md-4">
+                  <div class="card" style="width: 18rem">
+                    <img
+                      src="./img/image-9-3.png"
+                      class="card-img-top"
+                      alt="Testimonio 3"
+                    />
+                    <div class="card-body">
+                      <h5 class="card-title">Maria Lopez, 34 años</h5>
+                      <p class="card-text">Lectura de Tarot</p>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
+
+            <!-- Segunda slide con tres tarjetas -->
             <div class="carousel-item">
-              <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <div class="row">
+                <div class="col-md-4">
+                  <div class="card" style="width: 18rem">
+                    <img
+                      src="./img/image-9-3.png"
+                      class="card-img-top"
+                      alt="Testimonio 4"
+                    />
+                    <div class="card-body">
+                      <h5 class="card-title">Maria Lopez, 34 años</h5>
+                      <p class="card-text">Lectura de Tarot.</p>
+                    </div>
+                  </div>
                 </div>
-              </div>
-              <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <div class="col-md-4">
+                  <div class="card" style="width: 18rem">
+                    <img
+                      src="./img/image-9-3.png"
+                      class="card-img-top"
+                      alt="Testimonio 5"
+                    />
+                    <div class="card-body">
+                      <h5 class="card-title">Maria Lopez, 34 años</h5>
+                      <p class="card-text">Lectura de Tarot</p>
+                    </div>
+                  </div>
                 </div>
-              </div>
-              <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <div class="col-md-4">
+                  <div class="card" style="width: 18rem">
+                    <img
+                      src="./img/image-9-3.png"
+                      class="card-img-top"
+                      alt="Testimonio 6"
+                    />
+                    <div class="card-body">
+                      <h5 class="card-title">Maria Lopez, 34 años</h5>
+                      <p class="card-text">Lectura de Tarot</p>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+
+          <!-- Botones de control del carrusel -->
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#carouselTestimonios"
+            data-bs-slide="prev"
+          >
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
+            <span class="visually-hidden">Anterior</span>
           </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#carouselTestimonios"
+            data-bs-slide="next"
+          >
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
+            <span class="visually-hidden">Siguiente</span>
           </button>
         </div>
-        <div>
+
+        <!-- Botón para reservar -->
+        <div class="text-center mt-4">
           <button class="btn btn-primary">Reserva tu consulta</button>
         </div>
       </div>
