--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <!-- Favicon -->
+  <link rel="icon" type="image/png" href="img/group-1.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="img/group-1.png" sizes="16x16">
     <!-- bosstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
