--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                 <div class="col-md-4">
                   <div class="card" style="width: 18rem">
                     <img
-                      src="./img/image-9-3.png"
+                      src="./img/baba1.jpg"
                       class="card-img-top"
                       alt="Testimonio 1"
                     />
@@ -210,7 +210,7 @@
                 <div class="col-md-4">
                   <div class="card" style="width: 18rem">
                     <img
-                      src="./img/image-9-3.png"
+                      src="./img/baba2.jpg"
                       class="card-img-top"
                       alt="Testimonio 2"
                     />
@@ -223,7 +223,7 @@
                 <div class="col-md-4">
                   <div class="card" style="width: 18rem">
                     <img
-                      src="./img/image-9-3.png"
+                      src="./img/baba3.jpg"
                       class="card-img-top"
                       alt="Testimonio 3"
                     />
@@ -242,7 +242,7 @@
                 <div class="col-md-4">
                   <div class="card" style="width: 18rem">
                     <img
-                      src="./img/image-9-3.png"
+                      src="./img/baba4.jpg"
                       class="card-img-top"
                       alt="Testimonio 4"
                     />
@@ -255,7 +255,7 @@
                 <div class="col-md-4">
                   <div class="card" style="width: 18rem">
                     <img
-                      src="./img/image-9-3.png"
+                      src="./img/baba5.jpg"
                       class="card-img-top"
                       alt="Testimonio 5"
                     />
@@ -268,7 +268,7 @@
                 <div class="col-md-4">
                   <div class="card" style="width: 18rem">
                     <img
-                      src="./img/image-9-3.png"
+                      src="./img/baba6.jpg"
                       class="card-img-top"
                       alt="Testimonio 6"
                     />
@@ -325,17 +325,9 @@
               comprometidos a proteger tus datos personales.
             </p>
           </div>
-          <p>
-            No almacenamos información personal ni financiera. Los datos
-            compartidos son completamente privados y no se compartirán bajo
-            ninguna circunstancia. Todo envío o recepción de información
-            requiere el consentimiento del usuario. Los resultados dependen de
-            cada persona y caso particular. Al utilizar nuestros servicios, el
-            usuario acepta nuestra política de privacidad y declara ser mayor de
-            18 años. Nuestros servicios son solo para adultos y no sustituyen
-            atención médica, legal o profesional. Son para entretenimiento, sin
-            base científica. No se admiten reembolsos una vez efectuado el pago.
-          </p>
+          <div class=" buttom-politica">
+          <a href="./Documento sin título.pdf" class="btn-descargar" download>Descargar PDF</a>
+        </div>
         </div>
       </div>
     </div>
