--- a/index.html
+++ b/index.html
@@ -325,9 +325,11 @@
               comprometidos a proteger tus datos personales.
             </p>
           </div>
-          <div class=" buttom-politica">
-          <a href="./Documento sin título.pdf" class="btn-descargar" download>Descargar PDF</a>
-        </div>
+          <div class="buttom-politica">
+            <a href="./Documento sin título.pdf" class="btn-descargar" download
+              >Descargar PDF</a
+            >
+          </div>
         </div>
       </div>
     </div>
