--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
               <a class="nav-link" href="#">INICIO</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">SERVICIOS</a>
+              <a class="nav-link" href="#servicio">SERVICIOS</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">ACERCA DE</a>
+              <a class="nav-link" href="#acercade">ACERCA DE</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">POLITICAS DE PRIVACIDAD</a>
+              <a class="nav-link" href="#politica">POLITICAS DE PRIVACIDAD</a>
             </li>
           </ul>
         </div>
@@ -96,7 +96,7 @@
     </section>
 
     <!-- Services Section -->
-    <section class="services-section">
+    <section class="services-section" id="servicio">
       <div class="titulo">
         <img src="./img/group-1.png" alt="" />
         <h2>Nuestros Servicios</h2>
@@ -165,7 +165,7 @@
     </section>
 
     <!-- acerca de-->
-    <section class="about-section">
+    <section class="about-section" id="acercade">
       <div class="container">
         <img src="./img/Vector.png" alt="" />
         <h2>Acerca de Nosotros</h2>
@@ -182,7 +182,7 @@
     <!-- testimonios -->
 
     <section id="testimonios">
-      <div class="testimonios">
+      <div class="testimonios"  id="testi">
         <div class="documentacion mb-4">
           <img src="./img/testimonios icono.png" alt="" />
           <h2>Testimonios</h2>
@@ -256,7 +256,7 @@
 
     <!-- politica de privacidad -->
 
-    <div class="container-privacy">
+    <div class="container-privacy" id="politica">
       <div class="row">
         <div class="col-md-12">
           <div class="documentacion">
