--- a/index.html
+++ b/index.html
@@ -76,8 +76,9 @@
             </li>
           </ul>
         </div>
+        <!-- numero aca  -->
         <form class="d-flex">
-          <button class="btn" type="submit">Contacto</button>
+          <button href="https://wa.me/NUMEROBABA?text=Hola,%20quiero%20saber%20más%20sobre%20el%20tarot%20espiritual" class="btn" type="submit">Contacto</button>
         </form>
       </div>
     </nav>
@@ -91,7 +92,10 @@
           Encuentra respuestas a través <br />
           del poder del tarot y la astrología
         </p>
-        <a href="#" class="btn btn-custom">Contáctanos</a>
+        <!-- numero aca  -->
+        <a href="https://wa.me/NUMEROBABA?text=Hola,%20quiero%20saber%20más%20sobre%20el%20tarot%20espiritual" class="btn btn-custom" target="_blank">
+          Contáctanos
+        </a>
       </div>
     </section>
 
@@ -121,7 +125,8 @@
                 Explora los misterios de tu pasado, presente y futuro a través
                 de una consulta personalizada de tarot.
               </p>
-              <a href="#" class="btn btn-custom">Saber Más</a>
+              <!-- numero aca  -->
+              <a href="https://wa.me/NUMEROBABA?text=Hola,%20quiero%20saber%20más%20sobre%20el%20tarot%20espiritual" class="btn btn-custom" target="_blank">Saber Más</a>
             </div>
           </div>
         </div>
@@ -139,7 +144,8 @@
                 Descubre el impacto de los astros en tu vida con un análisis
                 completo de tu carta astral.
               </p>
-              <a href="#" class="btn btn-custom">Saber Más</a>
+              <!-- numero aca  -->
+              <a href="https://wa.me/NUMEROBABA?text=Hola,%20quiero%20saber%20más%20sobre%20el%20tarot%20espiritual" class="btn btn-custom" target="_blank">Saber Más</a>
             </div>
           </div>
         </div>
@@ -157,7 +163,8 @@
                 Fortalece tus relaciones con amarres efectivos y recupera tu paz
                 interior con nuestras limpiezas.
               </p>
-              <a href="#" class="btn btn-custom">Saber Más</a>
+              <!-- numero aca  -->
+              <a href="https://wa.me/NUMEROBABA?text=Hola,%20quiero%20saber%20más%20sobre%20el%20tarot%20espiritual" class="btn btn-custom" target="_blank">Saber Más</a>
             </div>
           </div>
         </div>
@@ -175,7 +182,8 @@
           lecturas de tarot, astrología y rituales energéticos, siempre con el
           compromiso de ayudarte a encontrar respuestas y equilibrio en tu vida.
         </p>
-        <a href="#" class="btn btn-custom">Contáctanos</a>
+        <!-- numero aca  -->
+        <a href="https://wa.me/NUMEROBABA?text=Hola,%20quiero%20saber%20más%20sobre%20el%20tarot%20espiritual" class="btn btn-custom" target="_blank">Contáctanos</a>
       </div>
     </section>
 
@@ -245,12 +253,9 @@
     
           </div>
         </div>
-        <!-- Botón para reservar -->
-        <div class="text-center mt-6" style="
-        display: flex;
-        justify-content: center;
-    ">
-          <button class="btn btn-primary">Reserva tu consulta</button>
+        <!-- Botón para reservar --><!-- numero aca  -->
+        <div class="text-center mt-6" style=" display: flex;justify-content: center;">
+          <button href="https://wa.me/NUMEROBABA?text=Hola,%20quiero%20saber%20más%20sobre%20el%20tarot%20espiritual" class="btn btn-primary">Reserva tu consulta</button>
         </div>
     </section>
 
